fixed glitch on mobile messenger container

--- a/client/src/components/features/Messenger/MessengerContainer/MessengerContainer.module.css
+++ b/client/src/components/features/Messenger/MessengerContainer/MessengerContainer.module.css
@@ -5,7 +5,6 @@
   border-radius: 1rem;
   background-color: var(--color-body);
   position: relative;
-  margin-left: 0.5rem;
   box-shadow: 0 0.4rem 0.8rem var(--color-shadow-dark),
     0 0.6rem 1.2rem var(--color-shadow-dark);
 }
